<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fr.univ.bordeaux</groupId>
  <artifactId>agon</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <!-- dependencyManagement is used to define versions and imports of dependencies (like a BOM) -->
  <!-- it does NOT automatically include the dependency in the build; use <dependencies> for that -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.0.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- dependencies are the libraries needed to compile and run the code -->
  <dependencies>
    <!-- add module for JUnit-->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- add JavaFX library (not included anymore in JDK) -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.2</version>
    </dependency>
    <!-- add JLine, see: https://jline.org/docs/intro  -->
    <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>3.30.0</version>
    </dependency>
    <!-- add Jline dependency (module Console UI )
    see (bottom of following page) : https://jline.org/docs/modules/console-ui
    -->
    <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline-console-ui</artifactId>
        <version>3.30.0</version>
    </dependency>
    <!-- add Jline dependncy -->
    <dependency>
      <groupId>org.jline</groupId>
      <artifactId>jline-terminal-jna</artifactId>
      <version>3.30.0</version>
    </dependency>
    <!-- improve code safety with annotations -->
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
    </dependency>

  </dependencies>

  <!-- build section contains plugins to automate build, run, and package tasks -->
  <build>

    <!-- specify correct path (not default one but custom) -->

    <plugins>

      <!-- run JUnit tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
      </plugin>

      <!-- create a jar with the main class specified -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>fr.univ.bordeaux.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <!-- run the main class using exec plugin (for non-JavaFX main) -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <mainClass>fr.univ.bordeaux.Main</mainClass>
        </configuration>
      </plugin>

      <!-- compiler plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>

      <!-- Plugin to run JavaFX applications easily -->
      <!-- This handles module-path and add-modules automatically -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>fr.univ.bordeaux.Main</mainClass>
        </configuration>
      </plugin>
      <!-- include dependencies into the .jar file -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>fr.univ.bordeaux.Main</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
